--- a/ejercicio-6B.css
+++ b/ejercicio-6B.css
@@ -18,3 +18,12 @@ button {
   background-color: red;
   color: white;
 }
+
+.error{
+  border: 4px solid red;
+  border-radius: 20px;
+}
+
+.oculto{
+  display: none;
+}
